# abp-unikraft

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.build  Kraftfile  MIGRATION.md  README.md  USAGE.md  wrapper.sh
.github/workflows/: deploy.yml
docs/: context-dump-20260407-kraftcloud-deployment.md
docs/workflows/: deploy-to-kraftcloud.md  hetzner-build.md  watchdog-deployment.md
patches/: 002-navigator-webdriver-always-false.patch  004-user-agent-spoof.patch  005-navigator-plugins-populate.patch  006-webgl-vendor-renderer-spoof.patch  009-webgl-readpixels-noise.patch  010-audio-fingerprint-noise.patch  015-timezone-override.patch  016-permissions-consistency.patch  017-remove-automation-flags.patch  019-hardware-concurrency-spoof.patch  series
patches/legacy/: 000-stealth-build-integration.patch  003-runtime-enable-neutralize.patch  (+6 more)
scripts/: apply-abp-compat-edits.sh  apply-feature-edits.sh  apply-patches.sh  apply-stealth-edits.sh  apply-stealth-extra-edits.sh  build-abp-stealth.sh  build-docker.sh  build-linux-via-docker.sh  build-local-mac.sh  build-on-fly.sh  build-on-fp-chromium.sh  build-on-hetzner.sh  build-unikernel.sh  deploy.sh  docker-build-inner.sh  ensure-node-esbuild.sh  ensure-rust-toolchain.sh  hetzner-build.sh  package-and-release.sh  patch_flags_state.py  preflight-fp-chromium-build.sh  test-deployment.sh  verify-abp-overlay-contract.sh  watchdog-hetzner.sh  watchdog-remote.sh
src/chrome/browser/abp/stealth/: BUILD.gn  abp_fingerprint_data.h  abp_stealth_switches.cc  abp_stealth_switches.h  abp_stealth_utils.cc  abp_stealth_utils.h
(+5 files in other folders)
